<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <NumberPicker
        android:id="@+id/hour_NP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/minute_NP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <NumberPicker
        android:id="@+id/minute_NP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <NumberPicker
        android:id="@+id/second_NP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/minute_NP"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/hourTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour"
        app:layout_constraintBottom_toTopOf="@id/hour_NP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/minute_NP"/>

    <TextView
        android:id="@+id/minuteTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_minute"
        app:layout_constraintBottom_toTopOf="@id/minute_NP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/secondTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_second"
        app:layout_constraintBottom_toTopOf="@id/second_NP"
        app:layout_constraintStart_toEndOf="@id/minute_NP"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/startBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_start"
        app:layout_constraintTop_toBottomOf="@id/minute_NP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/currentTimePB"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/circle_shape"
        android:indeterminate="false"
        android:max="100"
        android:progress="65"
        android:progressDrawable="@drawable/circular_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/currentTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="99:59:56"
        android:gravity="center"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="@id/currentTimePB"
        app:layout_constraintStart_toStartOf="@id/currentTimePB"
        app:layout_constraintEnd_toEndOf="@id/currentTimePB"
        app:layout_constraintBottom_toBottomOf="@id/currentTimePB"
        android:visibility="gone"/>

    <Button
        android:id="@+id/cancelBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/timer_cancel"
        app:layout_constraintTop_toBottomOf="@id/currentTimePB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pauseBT"
        android:visibility="gone"/>

    <Button
        android:id="@+id/pauseBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/timer_pause"
        app:layout_constraintTop_toBottomOf="@id/currentTimePB"
        app:layout_constraintStart_toEndOf="@id/cancelBT"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>